@@ -8,7 +8,7 @@
 #cmakedefine01 ENABLE_AS_IMAGE
 #cmakedefine01 ENABLE_BLOB
 #cmakedefine01 ENABLE_CHANNEL_MESSAGING
-#cmakedefine01 ENABLE_DATABASE
+#cmakedefine01 ENABLE_SQL_DATABASE
 #cmakedefine01 ENABLE_DATAGRID
 #cmakedefine01 ENABLE_DATALIST
 #cmakedefine01 ENABLE_DATA_TRANSFER_ITEMS
